--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,209 +1,115 @@
 ---
 ---
 
-@article{lv2014straight,
-  title={Straight line segments extraction and EKF-SLAM in indoor environment},
-  author={Lv, Jixin and Kobayashi, Yukinori and Ravankar, Ankit A and Emaru, Takanori},
-  journal={Journal of Automation and control Engineering},
-  volume={2},
-  number={3},
-  year={2014}
+@string{aps = {American Physical Society,}}
+
+@book{einstein1920relativity,
+  title={Relativity: the Special and General Theory},
+  author={Einstein, Albert},
+  year={1920},
+  publisher={Methuen & Co Ltd},
+  html={relativity.html}
 }
 
-@article{ravankar2015algorithms,
-  title={Algorithms and a framework for indoor robot mapping in a noisy environment using clustering in spatial and hough domains},
-  author={Ravankar, Ankit A and Hoshino, Yohei and Ravankar, Abhijeet and Jixin, Lv and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={International Journal of Advanced Robotic Systems},
-  volume={12},
-  number={3},
-  pages={27},
-  year={2015},
-  publisher={Sage Publications Sage UK: London, England}
+@book{einstein1956investigations,
+  bibtex_show={true},
+  title={Investigations on the Theory of the Brownian Movement},
+  author={Einstein, Albert},
+  year={1956},
+  publisher={Courier Corporation},
+  preview={brownian-motion.gif}
 }
 
-@article{ravankar2016bio,
-  title={On a bio-inspired hybrid pheromone signalling for efficient map exploration of multiple mobile service robots},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Emaru, Takanori},
-  journal={Artificial life and robotics},
-  volume={21},
-  pages={221--231},
-  year={2016},
-  publisher={Springer Japan}
+@article{einstein1950meaning,
+  abbr={AJP},
+  bibtex_show={true},
+  title={The meaning of relativity},
+  author={Einstein, Albert and Taub, AH},
+  journal={American Journal of Physics},
+  volume={18},
+  number={6},
+  pages={403--404},
+  year={1950},
+  publisher={American Association of Physics Teachers}
 }
 
-@article{ravankar2016hopping,
-  title={On a hopping-points svd and hough transform-based line detection algorithm for robot localization and mapping},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Hoshino, Yohei and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={International Journal of Advanced Robotic Systems},
-  volume={13},
-  number={3},
-  pages={98},
-  year={2016},
-  publisher={SAGE Publications Sage UK: London, England}
+@article{PhysRev.47.777,
+  abbr={PhysRev},
+  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
+  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  journal={Phys. Rev.},
+  location={New Jersey},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={1935},
+  month={May},
+  publisher=aps,
+  doi={10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
+  altmetric={248277},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true},
+  inspirehep_id = {3255}
 }
 
-@article{ravankar2016shp,
-  title={Shp: Smooth hypocycloidal paths with collision-free and decoupled multi-robot path planning},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Emaru, Takanori},
-  journal={International Journal of Advanced Robotic Systems},
-  volume={13},
-  number={3},
-  pages={133},
-  year={2016},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-
-@inproceedings{lv2016method,
-  title={A method of low-cost IMU calibration and alignment},
-  author={Lv, Jixin and Ravankar, Ankit A and Kobayashi, Yukinori and Emaru, Takanori},
-  booktitle={2016 IEEE/SICE International Symposium on System Integration (SII)},
-  pages={373--378},
-  year={2016},
-  organization={IEEE}
-}
-
-@article{ravankar2017symbiotic,
-  title={Symbiotic Navigation in Multi-Robot Systems with Remote Obstacle Knowledge Sharing},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Emaru, Takanori},
-  journal={Sensors},
-  volume={17},
-  number={7},
-  pages={1581},
-  year={2017},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@article{ravankar2017hitchhiking,
-  title={Hitchhiking robots: A collaborative approach for efficient multi-robot navigation in indoor environments},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Emaru, Takanori},
-  journal={Sensors},
-  volume={17},
+@article{einstein1905molekularkinetischen,
+  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
+  author={Einstein, A.},
+  journal={Annalen der physik},
+  volume={322},
   number={8},
-  pages={1878},
-  year={2017},
-  publisher={MDPI}
+  pages={549--560},
+  year={1905},
+  publisher={Wiley Online Library}
 }
 
-@inproceedings{ravankar2017hybrid,
-  title={A hybrid topological mapping and navigation method for large area robot mapping},
-  author={Ravankar, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
-  booktitle={2017 56th annual conference of the Society of Instrument and Control Engineers of Japan (SICE)},
-  pages={1104--1107},
-  year={2017},
-  organization={IEEE}
+@article{einstein1905movement,
+  abbr={Ann. Phys.},
+  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
+  author={Einstein, A.},
+  journal={Ann. Phys.},
+  volume={17},
+  pages={549--560},
+  year={1905}
 }
 
-@article{wang2018single,
-  title={A single LiDAR-based feature fusion indoor localization algorithm},
-  author={Wang, Yun-Ting and Peng, Chao-Chung and Ravankar, Ankit A and Ravankar, Abhijeet},
-  journal={Sensors},
-  volume={18},
-  number={4},
-  pages={1294},
-  year={2018},
-  publisher={MDPI}
+@article{einstein1905electrodynamics,
+  title={On the electrodynamics of moving bodies},
+  author={Einstein, A.},
+  year={1905}
 }
 
-@article{ravankar2018hitchhiking,
-  title={Hitchhiking Based Symbiotic Multi-Robot Navigation in Sensor Networks},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A. and Kobayashi, Yukinori and Hoshino, Yohei and Peng, CC and Watanabe, Michiko},
-  journal={Robotics},
-  volume={7},
-  number={3},
-  pages={37},
-  year={2018},
-  publisher={Multidisciplinary Digital Publishing Institute}
+@Article{einstein1905photoelectriceffect,
+  bibtex_show={true},
+  abbr={Ann. Phys.},
+  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
+  author={Albert Einstein},
+  abstract={This is the abstract text.},
+  journal={Ann. Phys.},
+  volume={322},
+  number={6},
+  pages={132--148},
+  year={1905},
+  doi={10.1002/andp.19053220607},
+  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
+  award_name={Nobel Prize}
 }
 
-@article{ravankar2018path,
-  title={Path smoothing techniques in robot navigation: State-of-the-art, current and future challenges},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Hoshino, Yohei and Peng, Chao-Chung},
-  journal={Sensors},
-  volume={18},
-  number={9},
-  pages={3170},
-  year={2018},
-  publisher={MDPI}
-}
-
-@inproceedings{ravankar2018autonomous,
-  title={Autonomous mapping and exploration with unmanned aerial vehicles using low cost sensors},
-  author={Ravankar, Ankit A and Ravankar, Abhijeet and Kobayashi, Yukinori and Emaru, Takanori},
-  booktitle={Proceedings},
-  volume={4},
-  number={1},
-  pages={44},
-  year={2018},
-  organization={MDPI}
-}
-
-@article{supe2020google,
-  title={Google earth engine for the detection of soiling on photovoltaic solar panels in arid environments},
-  author={Supe, Hitesh and Avtar, Ram and Singh, Deepak and Gupta, Ankita and Yunus, Ali P and Dou, Jie and A. Ravankar, Ankit and Mohan, Geetha and Chapagain, Saroj Kumar and Sharma, Vivek and others},
-  journal={Remote Sensing},
-  volume={12},
-  number={9},
-  pages={1466},
-  year={2020},
-  publisher={MDPI}
-}
-
-@inproceedings{lei2020semantic,
-  title={Semantic image segmentation on snow driving scenarios},
-  author={Lei, Yayun and Emaru, Takanori and Ravankar, Ankit A and Kobayashi, Yukinori and Wang, Su},
-  booktitle={2020 IEEE International Conference on Mechatronics and Automation (ICMA)},
-  pages={1094--1100},
-  year={2020},
-  organization={IEEE}
-}
-
-@article{narvaez2020autonomous,
-  title={Autonomous vtol-uav docking system for heterogeneous multirobot team},
-  author={Narv{\'a}ez, Eduardo and Ravankar, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={IEEE Transactions on Instrumentation and Measurement},
-  volume={70},
-  pages={1--18},
-  year={2020},
-  publisher={IEEE}
-}
-
-@article{ravankar2020hpprm,
-  title={HPPRM: hybrid potential based probabilistic roadmap algorithm for improved dynamic path planning of mobile robots},
-  author={Ravankar, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={IEEE Access},
-  volume={8},
-  pages={221743--221766},
-  year={2020},
-  publisher={IEEE}
-}
-
-@article{vachmanus2021multi,
-  title={Multi-modal sensor fusion-based semantic segmentation for snow driving scenarios},
-  author={Vachmanus, Sirawich and Ravankar, Ankit A and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={IEEE sensors journal},
-  volume={21},
-  number={15},
-  pages={16839--16851},
-  year={2021},
-  publisher={IEEE}
-}
-
-@article{ravankar2021autonomous,
-  title={Autonomous and safe navigation of mobile robots in vineyard with smooth collision avoidance},
-  author={Ravankar, Abhijeet and Ravankar, Ankit A and Rawankar, Arpit and Hoshino, Yohei},
-  journal={Agriculture},
-  volume={11},
-  number={10},
-  pages={954},
-  year={2021},
-  publisher={MDPI}
-}
-
-@inproceedings{ravankar2015connected,
-  title={A connected component labeling algorithm for sparse lidar data segmentation},
-  author={Ravankar, Abhijeet and Kobayashi, Yukinori and Ravankar, Ankit and Emaru, Takanori},
-  booktitle={2015 6th International Conference on Automation, Robotics and Applications (ICARA)},
-  pages={437--442},
-  year={2015},
-  organization={IEEE}
+@book{przibram1967letters,
+  bibtex_show={true},
+  title={Letters on wave mechanics},
+  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+  year={1967},
+  publisher={Vision},
+  preview={wave-mechanics.gif},
+  abbr={Vision}
 }
