update paper list in publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,10 +73,13 @@
   publisher={Sage Publications Sage UK: London, England}
 }
 
-@article{ravankar2015novel,
-  title={A Novel Vision Based Adaptive Transmission Power Control Algorithm for Energy Efficiency in Wireless Sensor Networks Employing Mobile Robots},
+@inproceedings{ravankar2015novel,
+  title={A novel vision based adaptive transmission power control algorithm for energy efficiency in wireless sensor networks employing mobile robots},
   author={Ravankar, Abhijeet and Ravankar, Ankit A and Kobayashi, Yukinori and Jixin, Lv and Emaru, Takanori and Hoshino, Yohei},
-  year={2015}
+  booktitle={2015 Seventh International Conference on Ubiquitous and Future Networks},
+  pages={300--305},
+  year={2015},
+  organization={IEEE}
 }
 
 @inproceedings{lv2015solution,
@@ -88,12 +91,7 @@
   organization={IEEE}
 }
 
-@phdthesis{ravankar2015probabilistic,
-  title={Probabilistic Approaches and Algorithms for Indoor Robot Mapping in Structured Environments [an abstract of dissertation and a summary of dissertation review]},
-  author={Ravankar, Ankit},
-  year={2015},
-  school={北海道大学}
-}
+
 
 @inproceedings{ravankar2015intelligent,
   title={An intelligent docking station manager for multiple mobile service robots},
@@ -195,16 +193,6 @@
   organization={MDPI}
 }
 
-@inproceedings{ravankar20152a1,
-  title={2A1-S04 Real Time Parallel Implementation of Dynamic Feature Detection on Embedded Robot Platforms},
-  author={Ravankar, Abhijeet and Kobayashi, Yukinori and Ravankar, Ankit and Emaru, Takanori and Jixin, Lv},
-  booktitle={The Proceedings of JSME annual Conference on Robotics and Mechatronics (Robomec) 2015},
-  pages={\_2A1--S04\_1},
-  year={2015},
-  organization={The Japan Society of Mechanical Engineers}
-}
-
-
 
 @inproceedings{kawamura2016adaptive,
   title={Adaptive control for omnidirectional wheeled robot},
@@ -303,12 +291,6 @@
   publisher={MDPI}
 }
 
-@article{ravankar2012map,
-  title={Map Building from Laser Range Sensor Information in Noisy Environment using Mixed Clustering, Singular Value Decomposition and Hough Transform},
-  author={RAVANKAR, Ankit A},
-  year={2012}
-}
-
 @inproceedings{imai2017utilization,
   title={Utilization of the Student E-Portfolio in the Graduate Education: The Case Report of" Nitobe School Program" in Hokkaido University},
   author={Imai, Shotaro and Shimamura, Michiyo and Ravankar, Ankit A and Haga, Hisashi and Kobayashi, Yukinori and Yamanaka, Yasuhiro},
@@ -338,12 +320,6 @@
   organization={The Japan Society of Mechanical Engineers}
 }
 
-@phdthesis{ravankar2017novel,
-  title={Novel Algorithms for Multi-Robot Path Planning, Task Coordination, Mapping and Localization in Indoor Environment [an abstract of dissertation and a summary of dissertation review]},
-  author={RAVANKAR, ABHIJEET},
-  year={2017},
-  school={北海道大学}
-}
 
 
 @inproceedings{ravankar2017can,
@@ -559,13 +535,14 @@
   publisher={MDPI}
 }
 
-@phdthesis{ravankar2015probabilistic,
-  title={Probabilistic Approaches and Algorithms for Indoor Robot Mapping in Structured Environments [an abstract of},
-  author={Ravankar, Ankit},
-  year={2015},
-  school={博士 (工学) 甲第}
+@inproceedings{小野俊太郎2018構体と内装の二重シェル構造を有する鉄道車体モデルの音響解析,
+  title={構体と内装の二重シェル構造を有する鉄道車体モデルの音響解析},
+  author={小野俊太郎 and 小林幸徳 and 山本克也 and 江丸貴紀 and others},
+  booktitle={Dynamics \& Design Conference 2018},
+  pages={314},
+  year={2018},
+  organization={一般社団法人 日本機械学会}
 }
-
 
 @inproceedings{ravankar2019cooperative,
   title={Cooperative multi-robot map merging with task distribution},
@@ -647,7 +624,10 @@
   title={A Semi-active Multi-mode Vibration Damping Technique to Study the Impact of Vertical Flexural Vibration Damping of a Railway Car-body Floor on Ride Comfort},
   author={Silabhadra, DAS and GUPTA, Ashish and Shuntaro, ONO and KOBAYASHI, Yukinori and EMARU, Takanori and RAVANKAR, Ankit},
   booktitle={World Congress on Railway Research (WCRR), 2019 Tokyo},
-  year={2019}
+  volume={},
+  number={},
+  pages={},
+  year={2019},
 }
 
 @article{ravankar2020development,
@@ -875,18 +855,13 @@
 }
 
 
-@inproceedings{imai10discussion,
-  title={“Discussion on a method of Team-Based-Learning style lecture for graduate students in a research university”},
-  author={Imai, S and Ravankar, AA and Shimamura, M and Takasuka, TE and Chiba, G},
-  booktitle={5th International Congress on Advanced Applied Informatics, DOI},
-  volume={10}
-}
-
-@inproceedings{ravankar10yamanaka,
-  title={Yamanaka,“Nurtuing Problem-Finding Skills in Graduate Students through Problem Based Learening Approaches”},
-  author={Ravankar, AA and Imai, S and Shimamura, M and Chiba, G and Takasuka, TE},
-  booktitle={5th International Congress on Advanced Applied Informatics, DOI},
-  volume={10}
+@inproceedings{imai2016discussion,
+  title={Discussion on a method of team-based-learning style lecture for graduate students in a research university},
+  author={Imai, Shotaro and Ravankar, Ankit A and Shimamura, Michiyo and Takasuka, Taichi E and Chiba, Go and Yamanaka, Yasuhiro},
+  booktitle={2016 5th IIAI International Congress on Advanced Applied Informatics (IIAI-AAI)},
+  pages={537--541},
+  year={2016},
+  organization={IEEE}
 }
 
 @inproceedings{ravankar2019hmrp,
