update publications and CV

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -387,7 +387,7 @@
   organization={IEEE}
 }
 
-@article{ravankar2018towards,
+@preprint{ravankar2018towards,
   title={Towards better problem finding and creativity in graduate school education},
   author={Ravankar, Ankit A and Imai, Shotaro and Ravankar, Abhijeet and Kato, Tomomichi and Takasuka, Taichi and Tsuji, Teruyuki and Shigetomi, Kaori K and Saito, Ken},
   journal={arXiv preprint arXiv:1807.02249},
@@ -416,7 +416,7 @@
   publisher={MDPI}
 }
 
-@article{yamaguchi2018aerial,
+@preprint{yamaguchi2018aerial,
   title={Aerial Robot Model based design and verification of the single and multi-agent inspection application development},
   author={Yamaguchi, Seiko P and Sakuma, Masaru and Ueno, Takaki and Karolonek, Filip and Uhl, Tadeusz and Ravankar, Ankit A and Emaru, Takanori and Kobayashi, Yukinori},
   journal={arXiv preprint arXiv:1812.05296},
@@ -1042,7 +1042,7 @@
   organization={IEEE}
 }
 
-@article{vachmanus2018road,
+@preprint{vachmanus2018road,
   title={Road detection in snowy forest environment using rgb camera},
   author={Vachmanus, Sirawich and Emaru, Takanori and Ravankar, Ankit A and Kobayashi, Yukinori},
   journal={arXiv preprint arXiv:2212.08511},
@@ -1266,7 +1266,7 @@
   publisher={IEEE}
 }
 
-@article{chikhalikar2023preferential,
+@preprint{chikhalikar2023preferential,
   title={Preferential Multi-Target Search in Indoor Environments using Semantic SLAM},
   author={Chikhalikar, Akash and Ravankar, Ankit A and Luces, Jose Victorio Salazar and Hirata, Yasuhisa},
   journal={arXiv preprint arXiv:2309.14063},
@@ -1298,6 +1298,7 @@
   booktitle={2024 IEEE/SICE International Symposium on System Integration (SII)},
   pages={1561--1568},
   year={2024},
+  conference = {true},
   organization={IEEE}
 }
 
@@ -1309,6 +1310,13 @@
   number={1},
   pages={57--66},
   year={2024},
+  abbr={JCMSI},
+  bibtex_show={true},
+  altmetric={false},
+  google_scholar_id={Z5m8FVwuT1cC},
+  html={https://www.tandfonline.com/doi/full/10.1080/18824889.2024.2314800},
+  type ={article},
+  doi={https://doi.org/10.1080/18824889.2024.2314800},
   publisher={Taylor \& Francis}
 }
 
@@ -1320,6 +1328,13 @@
   number={3},
   pages={23--00352},
   year={2024},
+  abbr={JSME-ME},
+  bibtex_show={true},
+  altmetric={false},
+  google_scholar_id={ML0RJ9NH7IQC},
+  html={https://www.jstage.jst.go.jp/article/mej/11/3/11_23-00352/_article/-char/ja/},
+  type ={article},
+  doi={https://doi.org/10.1299/mej.23-00352},
   publisher={The Japan Society of Mechanical Engineers}
 }
 
@@ -1337,6 +1352,14 @@
   author={Terayama, Junya and Ravankar, Ankit A and Luces, Jose Victorio Salazar and Tafrishi, Seyed Amir and Hirata, Yasuhisa},
   journal={IEEE Robotics and Automation Letters},
   year={2024},
+  abbr={IEEE-RAL},
+  bibtex_show={true},
+  altmetric={false},
+  pdf={2024-IEEE-RAL-Terayama.pdf},
+  google_scholar_id={BwyfMAYsbu0C},
+  html={https://ieeexplore.ieee.org/abstract/document/10560462},
+  type ={article},
+  doi={https://doi.org/10.1109/LRA.2024.3415928},
   publisher={IEEE}
 }
 
@@ -1345,5 +1368,12 @@
   author={Chikhalikar, Akash and Ravankar, Ankit A and Luces, Jose Victorio Salazar and Hirata, Yasuhisa},
   journal={IEEE Access},
   year={2024},
-  publisher={IEEE}
+  publisher={IEEE},
+  abbr={ACCESS},
+  bibtex_show={true},
+  altmetric={false},
+  google_scholar_id={},
+  html={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10637402},
+  type ={article},
+  doi = {10.1109/ACCESS.2024.3444478},
 }
