Update bibliograpy and selected works try

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -835,6 +835,14 @@
   volume={8},
   pages={221743--221766},
   year={2020},
+  bibtex_show={true},
+  altmetric={true},
+  dimensions={false},
+  doi={10.1109/MRA.2022.3223256},
+  google_scholar_id={eflP2zaiRacC},
+  html={https://ieeexplore.ieee.org/abstract/document/9286439},
+  type={article},
+  selected={true},
   publisher={IEEE}
 }
 
@@ -1084,6 +1092,15 @@
   number={1},
   pages={8--23},
   year={2023},
+  bibtex_show={true},
+  altmetric={true},
+  dimensions={true},
+  preview={ravankar01-3223256-large.gif},
+  doi={10.1109/MRA.2022.3223256},
+  google_scholar_id={uLbwQdceFCQC},
+  html={https://ieeexplore.ieee.org/abstract/document/9976330},
+  type ={article},
+  selected={true},
   publisher={IEEE}
 }
 
@@ -1292,15 +1309,23 @@
 }
 
 
-@inproceedings{chinchilla2024real,
-  title={Real-Time Marker-Based Monocular Autonomous Docking in Semi-Unstructured Indoor Environments},
+@INPROCEEDINGS{10417484,
   author={Chinchilla, Sebastian and Saito, Takumi and Oikawa, Ryosuke and Yamada, Tomoaki and Toshiki, Naoto and Yamane, Satsuki and Salazar, Jose and Ravankar, Ankit A and Hirata, Yasuhisa},
-  booktitle={2024 IEEE/SICE International Symposium on System Integration (SII)},
-  pages={1561--1568},
+  booktitle={2024 IEEE/SICE International Symposium on System Integration (SII)}, 
+  title={Real-Time Marker-Based Monocular Autonomous Docking in Semi-Unstructured Indoor Environments*}, 
   year={2024},
-  conference = {true},
-  organization={IEEE}
-}
+  volume={},
+  number={},
+  pages={1561-1568},
+  keywords={Transportation;System integration;Position measurement;Real-time systems;Trajectory;Safety;Resilience},
+  abbr={},
+  bibtex_show={true},
+  altmetric={false},
+  pdf={Real-Time_Marker-Based_Monocular_Autonomous_Docking_in_Semi-Unstructured_Indoor_Environments.pdf},
+  google_scholar_id={BUYA1_V_uYcC},
+  html={https://ieeexplore.ieee.org/abstract/document/10417484},
+  type ={proceedings},
+  doi={10.1109/SII58957.2024.10417484}}
 
 @article{emoto2024automatic,
   title={Automatic inspection of wheel surface defects using a combination of laser sensors and machine vision},
@@ -1322,7 +1347,7 @@
 
 @article{emoto2024method,
   title={A method for detecting wear and damage on railcar wheel tread surface using a combination of laser measurement and machine vision},
-  author={EMOTO, Takeshi and EMARU, Takanori and RAVANKAR, Ankit and RAVANKAR, Abhijeet and KOBAYASHI, Yukinori},
+  author={Emoto, Takeshi and Emaru, Takanori and Ravankar, Ankit A and Ravankar, Abhijeet and Kobayashi, Yukinori},
   journal={Mechanical Engineering Journal},
   volume={11},
   number={3},
@@ -1340,7 +1365,7 @@
 
 @article{tafrishi2024safety,
   title={Safety for Human-Robot Interaction with a Shared Autonomy},
-  author={Tafrishi, SA and Ravankar, AA and Hirata, Y},
+  author={Tafrishi, Seyed Amir and Ravankar, Ankit A and Hirata, Yasuhisa},
   journal={interactions},
   volume={3},
   pages={4},
@@ -1355,6 +1380,8 @@
   abbr={IEEE-RAL},
   bibtex_show={true},
   altmetric={false},
+  preview={teray1-3415928-large.gif},
+  selected={true},
   pdf={2024-IEEE-RAL-Terayama.pdf},
   google_scholar_id={BwyfMAYsbu0C},
   html={https://ieeexplore.ieee.org/abstract/document/10560462},
@@ -1370,6 +1397,8 @@
   year={2024},
   publisher={IEEE},
   abbr={ACCESS},
+  preview={Sem_map_vector.gif},
+  selected={true},
   bibtex_show={true},
   altmetric={false},
   google_scholar_id={},
