--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1093,6 +1093,7 @@
   pages={8--23},
   year={2023},
   bibtex_show={true},
+  abbr={IEEE-RAM},
   altmetric={true},
   dimensions={true},
   preview={ravankar01-3223256-large.gif},
@@ -1241,6 +1242,14 @@
   number={11},
   pages={12209--12223},
   year={2023},
+  google_scholar_id={nrtMV_XWKgEC},
+  abbr={IEEE-SENSORS},
+  preview={Dong-sensors.gif},
+  bibtex_show={true},
+  altmetric={false},
+  type ={article},
+  doi={10.1109/JSEN.2023.3269031},
+  html={https://ieeexplore.ieee.org/abstract/document/10108938},
   publisher={IEEE}
 }
 
@@ -1261,6 +1270,14 @@
   number={3},
   pages={496--501},
   year={2023},
+  preview={10015_2023_882_Fig4_HTML.gif},
+  abbr={AROB},
+  bibtex_show={true},
+  altmetric={false},
+  html={https://link.springer.com/article/10.1007/s10015-023-00882-y},
+  google_scholar_id={uc_IGeMz5qoC},
+  type ={article},
+  doi={https://doi.org/10.1007/s10015-023-00882-y},
   publisher={Springer Japan Tokyo}
 }
 
@@ -1272,6 +1289,14 @@
   number={3},
   pages={502--508},
   year={2023},
+  preview={10015_2023_883_Fig2_HTML.gif},
+  abbr={AROB},
+  bibtex_show={true},
+  altmetric={false},
+  type ={article},
+  html={https://link.springer.com/article/10.1007/s10015-023-00883-x},
+  google_scholar_id={ipzZ9siozwsC},
+  doi={https://doi.org/10.1007/s10015-023-00883-x},
   publisher={Springer Japan Tokyo}
 }
 
@@ -1280,6 +1305,19 @@
   author={Liao, Zhenyu and Luces, Jose V Salazar and Ravankar, Ankit A and Hirata, Yasuhisa},
   journal={IEEE Robotics and Automation Letters},
   year={2023},
+  volume={8},
+  number={9},
+  pages={5323-5330},
+  abbr={IEEE-RAL},
+  bibtex_show={true},
+  altmetric={false},
+  preview={liao1-3294718-large.gif},
+  selected={true},
+  pdf={Running_Guidance_for_Visually_Impaired_People_Using_Sensory_Augmentation_Technology_Based_Robotic_System.pdf},
+  google_scholar_id={EkHepimYqZsC},
+  html={https://ieeexplore.ieee.org/abstract/document/10180006},
+  type ={article},
+  doi={10.1109/LRA.2023.3294718},
   publisher={IEEE}
 }
 
@@ -1318,14 +1356,15 @@
   number={},
   pages={1561-1568},
   keywords={Transportation;System integration;Position measurement;Real-time systems;Trajectory;Safety;Resilience},
-  abbr={},
+  abbr={IEEE-SII},
   bibtex_show={true},
   altmetric={false},
   pdf={Real-Time_Marker-Based_Monocular_Autonomous_Docking_in_Semi-Unstructured_Indoor_Environments.pdf},
   google_scholar_id={BUYA1_V_uYcC},
   html={https://ieeexplore.ieee.org/abstract/document/10417484},
   type ={proceedings},
-  doi={10.1109/SII58957.2024.10417484}}
+  doi={10.1109/SII58957.2024.10417484}
+  }
 
 @article{emoto2024automatic,
   title={Automatic inspection of wheel surface defects using a combination of laser sensors and machine vision},
@@ -1337,6 +1376,7 @@
   year={2024},
   abbr={JCMSI},
   bibtex_show={true},
+  preview={tmsi_a_2314800_f0008_oc.gif},
   altmetric={false},
   google_scholar_id={Z5m8FVwuT1cC},
   html={https://www.tandfonline.com/doi/full/10.1080/18824889.2024.2314800},
@@ -1363,10 +1403,10 @@
   publisher={The Japan Society of Mechanical Engineers}
 }
 
-@article{tafrishi2024safety,
+@inproceedings{tafrishi2024safety,
   title={Safety for Human-Robot Interaction with a Shared Autonomy},
   author={Tafrishi, Seyed Amir and Ravankar, Ankit A and Hirata, Yasuhisa},
-  journal={interactions},
+  journal={Interactions},
   volume={3},
   pages={4},
   year={2024}
@@ -1401,7 +1441,7 @@
   selected={true},
   bibtex_show={true},
   altmetric={false},
-  google_scholar_id={},
+  google_scholar_id={p__nRnzSRKYC},
   html={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10637402},
   type ={article},
   doi = {10.1109/ACCESS.2024.3444478},
