update selected works

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -820,11 +820,20 @@
 
 @article{narvaez2020autonomous,
   title={Autonomous vtol-uav docking system for heterogeneous multirobot team},
-  author={Narv{\'a}ez, Eduardo and Ravankar, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
+  author={Narv{\'a}ez*†, Eduardo and Ravankar*†, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
   journal={IEEE Transactions on Instrumentation and Measurement},
   volume={70},
   pages={1--18},
   year={2020},
+  annotation={†* Co-first Author},
+  google_scholar_id={D_sINldO8mEC},
+  selected={true},
+  bibtex_show={true},
+  abbr={IEEE-TIM}, 
+  preview={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.gif},
+  pdf={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.pdf},
+  html={https://ieeexplore.ieee.org/abstract/document/9269492},
+  doi={10.1109/TIM.2020.3039649},
   publisher={IEEE}
 }
 
@@ -837,7 +846,9 @@
   year={2020},
   bibtex_show={true},
   altmetric={true},
+  abbr={ACCESS},
   dimensions={false},
+  preview={HPPRM.gif},
   doi={10.1109/MRA.2022.3223256},
   google_scholar_id={eflP2zaiRacC},
   html={https://ieeexplore.ieee.org/abstract/document/9286439},
