--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -829,6 +829,7 @@
   google_scholar_id={D_sINldO8mEC},
   selected={true},
   bibtex_show={true},
+  dimension={true},
   abbr={IEEE-TIM}, 
   preview={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.gif},
   pdf={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.pdf},
@@ -847,7 +848,7 @@
   bibtex_show={true},
   altmetric={true},
   abbr={ACCESS},
-  dimensions={false},
+  dimensions={true},
   preview={HPPRM.gif},
   doi={10.1109/MRA.2022.3223256},
   google_scholar_id={eflP2zaiRacC},
