--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,8 @@
   author={Ravankar, Ankit A and Hoshino, Yohei and Emaru, Takanori and Kobayashi, Yukinori},
   journal={Bulletin of Networking, Computing, Systems, and Software},
   volume={1},
+  bibtex_show={true},
+  google_scholar_id={u5HHmVD_uO8C},
   number={1},
   pages={9--12},
   year={2012}
@@ -39,7 +41,12 @@
   journal={Journal of Automation and control Engineering},
   volume={2},
   number={3},
-  year={2014}
+  year={2014},
+  abbr={JOACE},
+  bibtex_show={true},
+  pdf={20140113054354731.pdf},
+  google_scholar_id={UeHWp8X0CEIC},
+  publisher={Engineering and Technology Publishing}
 }
 
 @inproceedings{ravankar2014embarrassingly,
@@ -59,6 +66,11 @@
   number={4},
   pages={44},
   year={2015},
+  abbr={IJARS},
+  google_scholar_id={Y0pCki6q_DkC},
+  bibtex_show={true},
+  doi={https://doi.org/10.5772/60407},
+  html={https://journals.sagepub.com/doi/full/10.5772/60407},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -70,6 +82,11 @@
   number={3},
   pages={27},
   year={2015},
+  abbr={IJARS},
+  google_scholar_id={W7OEmFMy1HYC},
+  bibtex_show={true},
+  doi={https://doi.org/10.5772/59992},
+  html={https://journals.sagepub.com/doi/full/10.5772/59992},
   publisher={Sage Publications Sage UK: London, England}
 }
 
@@ -128,6 +145,13 @@
   volume={21},
   pages={221--231},
   year={2016},
+  google_scholar_id={5nxA0vEk-isC},
+  bibtex_show={true},
+  abbr={AROB},
+  html={https://link.springer.com/article/10.1007/s10015-016-0279-4},
+  pdf={s10015-016-0279-4.pdf},
+  dimensions={true},
+  doi={https://doi.org/10.1007/s10015-016-0279-4},
   publisher={Springer Japan}
 }
 
@@ -139,6 +163,12 @@
   number={3},
   pages={98},
   year={2016},
+  abbr={IJARS},
+  google_scholar_id={8k81kl-MbHgC},
+  bibtex_show={true},
+  html={https://journals.sagepub.com/doi/full/10.5772/63540},
+  dimensions={false},
+  doi={https://doi.org/10.5772/63540},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -150,6 +180,12 @@
   number={3},
   pages={133},
   year={2016},
+  abbr={IJARS},
+  google_scholar_id={kNdYIx-mwKoC},
+  bibtex_show={true},
+  html={https://journals.sagepub.com/doi/full/10.5772/63458},
+  dimensions={false},
+  doi={https://doi.org/10.5772/63458},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -179,6 +215,12 @@
   number={6},
   pages={1729881416666088},
   year={2016},
+  abbr={IJARS},
+  google_scholar_id={_kc_bZDykSQC},
+  bibtex_show={true},
+  html={https://journals.sagepub.com/doi/full/10.1177/1729881416666088},
+  dimensions={true},
+  doi={https://doi.org/10.1177/1729881416666088},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -277,6 +319,12 @@
   number={7},
   pages={1581},
   year={2017},
+  abbr={Sensors},
+  google_scholar_id={mB3voiENLucC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/1424-8220/17/7/1581},
+  doi={https://doi.org/10.3390/s17071581},
   publisher={Multidisciplinary Digital Publishing Institute}
 }
 
@@ -288,6 +336,12 @@
   number={8},
   pages={1878},
   year={2017},
+  abbr={Sensors},
+  google_scholar_id={HDshCWvjkbEC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/1424-8220/17/8/1878},
+  doi={https://doi.org/10.3390/s17081878},
   publisher={MDPI}
 }
 
@@ -366,6 +420,12 @@
   number={4},
   pages={1294},
   year={2018},
+  abbr={Sensors},
+  google_scholar_id={M3NEmzRMIkIC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.mdpi.com/1424-8220/18/4/1294},
+  doi={https://doi.org/10.3390/s18041294},
   publisher={MDPI}
 }
 
@@ -402,6 +462,12 @@
   number={3},
   pages={37},
   year={2018},
+  abbr={Robotics},
+  google_scholar_id={GnPB-g6toBAC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/2218-6581/7/3/37},
+  doi={https://doi.org/10.3390/robotics7030037},
   publisher={Multidisciplinary Digital Publishing Institute}
 }
 
@@ -413,6 +479,12 @@
   number={9},
   pages={3170},
   year={2018},
+  abbr={Sensors},
+  google_scholar_id={O3NaXMp0MMsC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/1424-8220/18/9/3170},
+  doi={https://doi.org/10.3390/s18093170},
   publisher={MDPI}
 }
 
@@ -472,6 +544,12 @@
   number={4},
   pages={799},
   year={2019},
+  abbr={App. Sciences},
+  google_scholar_id={HoB7MX3m0LUC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.mdpi.com/2076-3417/9/4/799},
+  doi={https://doi.org/10.3390/app9040799},
   publisher={MDPI}
 }
 
@@ -501,6 +579,12 @@
   number={10},
   pages={2230},
   year={2019},
+  abbr={Sensors},
+  google_scholar_id={zA6iFVUQeVQC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.mdpi.com/1424-8220/19/10/2230},
+  doi={https://doi.org/10.3390/s19102230},
   publisher={MDPI}
 }
 
@@ -512,6 +596,12 @@
   number={13},
   pages={2753},
   year={2019},
+  abbr={App. Sciences},
+  google_scholar_id={u_35RYKgDlwC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.mdpi.com/2076-3417/9/13/2753},
+  doi={https://doi.org/10.3390/app9132753},
   publisher={MDPI}
 }
 
@@ -532,6 +622,12 @@
   number={20},
   pages={4384},
   year={2019},
+  abbr={Sensors},
+  google_scholar_id={dfsIfKJdRG4C},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.mdpi.com/1424-8220/19/20/4384},
+  doi={https://doi.org/10.3390/s19204384},
   publisher={MDPI}
 }
 
@@ -606,6 +702,14 @@
   volume={25},
   pages={264--272},
   year={2020},
+  abbr={AROB},
+  google_scholar_id={nb7KW1ujOQ8C},
+  bibtex_show={true},
+  preview={10015_2020_591_Fig5_HTML.gif},
+  dimensions={true},
+  pdf={s10015-020-00591-w.pdf},
+  html={https://link.springer.com/article/10.1007/s10015-020-00591-w},
+  doi={https://doi.org/10.1007/s10015-020-00591-w},
   publisher={Springer Japan}
 }
 
@@ -638,6 +742,12 @@
   number={5},
   pages={182},
   year={2020},
+  abbr={Agriculture},
+  google_scholar_id={uWQEDVKXjbEC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/2077-0472/10/5/182},
+  doi={https://doi.org/10.3390/agriculture10050182},
   publisher={MDPI}
 }
 
@@ -649,6 +759,13 @@
   number={3},
   pages={138--147},
   year={2020},
+  abbr={AROB},
+  google_scholar_id={OU6Ihb5iCvQC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.tandfonline.com/doi/abs/10.9746/jcmsi.13.138},
+  doi={https://doi.org/10.9746/jcmsi.13.138},
+  award={SICE Best Journal Paper Award},
   publisher={Taylor \& Francis}
 }
 
@@ -660,6 +777,12 @@
   number={9},
   pages={1466},
   year={2020},
+  abbr={Remote Sensing},
+  google_scholar_id={u9iWguZQMMsC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/2072-4292/12/9/1466},
+  doi={https://doi.org/10.3390/rs12091466},
   publisher={MDPI}
 }
 
@@ -671,10 +794,15 @@
   number={1},
   pages={66--86},
   year={2020},
+  abbr={IJIRM},
+  google_scholar_id={XiSMed-E-HIC},
+  bibtex_show={true},
+  dimensions={false},
+  doi={https://doi.org/10.52731/ijirm.v4.i1.530},
   publisher={International Institute of Applied Informatics}
 }
 
-@article{ravankar2017effect,
+@inproceedings{ravankar2017effect,
   title={Effect of instructor’s actions and attitudes on student’s motivation and discussion process in TBL class for graduate students},
   author={Ravankar, Ankit and Shimamura, Michiyo and Takasuka, Taichi and Chiba, Go and Yamanaka, Yasuhiro},
   year={2017}
@@ -696,6 +824,13 @@
   volume={26},
   pages={52--60},
   year={2021},
+  abbr={AROB},
+  google_scholar_id={K3LRdlH-MEoC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://link.springer.com/article/10.1007/s10015-020-00612-8},
+  doi={https://doi.org/10.1007/s10015-020-00612-8},
+  pdf={s10015-020-00612-8.pdf},
   publisher={Springer Japan}
 }
 
@@ -743,6 +878,12 @@
   number={1},
   pages={59--69},
   year={2020},
+  abbr={IEE},
+  google_scholar_id={B3FOqHPlNUQC},
+  bibtex_show={true},
+  dimensions={false},
+  html={https://www.iaiai.org/journals/index.php/IEE/article/view/539},
+  doi={https://doi.org/10.52731/iee.v6.i1.539},
   publisher={International Institute of Applied Informatics}
 }
 
@@ -829,7 +970,7 @@
   google_scholar_id={D_sINldO8mEC},
   selected={true},
   bibtex_show={true},
-  dimension={true},
+  dimensions={true},
   abbr={IEEE-TIM}, 
   preview={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.gif},
   pdf={Autonomous_VTOL-UAV_Docking_System_for_Heterogeneous_Multirobot_Team.pdf},
@@ -846,7 +987,7 @@
   pages={221743--221766},
   year={2020},
   bibtex_show={true},
-  altmetric={true},
+  altmetric={false},
   abbr={ACCESS},
   dimensions={true},
   preview={HPPRM.gif},
@@ -858,10 +999,11 @@
   publisher={IEEE}
 }
 
-@article{ravankar2019visual,
+@inproceedings{ravankar2019visual,
   title={Visual-aided Multi-robot Mapping and Navigation using Topological Features},
   author={Ravankar, Ankit and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
   year={2019},
+  booktitle={Proceedings},
   publisher={MDPI AG}
 }
 
@@ -945,6 +1087,12 @@
   number={15},
   pages={16839--16851},
   year={2021},
+  abbr={IEEE-Sensors},
+  google_scholar_id={Mojj43d5GZwC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://ieeexplore.ieee.org/abstract/document/9420724},
+  doi={10.1109/JSEN.2021.3077029},
   publisher={IEEE}
 }
 
@@ -974,6 +1122,12 @@
   number={10},
   pages={954},
   year={2021},
+  abbr={Agriculture},
+  google_scholar_id={tkaPQYYpVKoC},
+  bibtex_show={true},
+  dimensions={true},
+  html={https://www.mdpi.com/2077-0472/11/10/954},
+  doi={https://doi.org/10.3390/agriculture11100954},
   publisher={MDPI}
 }
 
@@ -984,17 +1138,6 @@
   pages={1282--1287},
   year={2021},
   organization={IEEE}
-}
-
-@article{vachmanus2021corrections,
-  title={Corrections to “Multi-Modal Sensor Fusion-Based Semantic Segmentation for Snow Driving Scenarios”},
-  author={Vachmanus, Sirawich and Ravankar, Ankit A and Emaru, Takanori and Kobayashi, Yukinori},
-  journal={IEEE Sensors Journal},
-  volume={21},
-  number={22},
-  pages={26186--26189},
-  year={2021},
-  publisher={IEEE}
 }
 
 @inproceedings{ravankar2021autonomous,
@@ -1022,6 +1165,7 @@
   booktitle={2022 International Conference on Robotics and Automation (ICRA)},
   pages={5755--5761},
   year={2022},
+  abbr={IEEE ICRA},
   organization={IEEE}
 }
 
@@ -1031,6 +1175,7 @@
   booktitle={2021 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
   pages={1953--1959},
   year={2021},
+  abbr={ ROBIO},
   organization={IEEE}
 }
 
@@ -1040,6 +1185,7 @@
   booktitle={2021 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
   pages={99--104},
   year={2021},
+  abbr={ ROBIO},
   organization={IEEE}
 }
 
@@ -1075,6 +1221,7 @@
   booktitle={2022 International Conference on Robotics and Automation (ICRA)},
   pages={9325--9331},
   year={2022},
+  abbr={ICRA },
   organization={IEEE}
 }
 
@@ -1084,6 +1231,7 @@
   booktitle={2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   pages={6657--6664},
   year={2022},
+  abbr={IROS},
   organization={IEEE}
 }
 
