--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -337,6 +337,7 @@
   pages={1878},
   year={2017},
   abbr={Sensors},
+  selected={true},
   google_scholar_id={HDshCWvjkbEC},
   bibtex_show={true},
   dimensions={true},
@@ -1087,6 +1088,7 @@
   number={15},
   pages={16839--16851},
   year={2021},
+  selected={true},
   abbr={IEEE-Sensors},
   google_scholar_id={Mojj43d5GZwC},
   bibtex_show={true},
