--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1608,3 +1608,29 @@
   type ={article},
   doi = {10.1109/ACCESS.2024.3444478},
 }
+
+@INPROCEEDINGS{10711707,
+  author={Moyo, Kamogelo Teddy Theodore and Luces, Jose Victorio Salazar and Ravankar, Ankit A  and Hirata, Yasuhisa and Shota, Morozumi},
+  booktitle={2024 IEEE 20th International Conference on Automation Science and Engineering (CASE)}, 
+  title={Enhancing Manipulator Flexibility: Real-time Positional Control for Variable Assembly Environments using AprilTag Markers and Edge Detection}, 
+  year={2024},
+  volume={},
+  number={},
+  abbr={CASE},
+  pages={3932-3939},
+  bibtex_show={true},
+  keywords={Visualization;Service robots;Image edge detection;Robot vision systems;Manipulators;Real-time systems;Safety;Digital twins;Relays;Assembly},
+  doi={10.1109/CASE59546.2024.10711707}}
+
+  @INPROCEEDINGS{10731425,
+  author={Miuccio, Alessandra and Manríquez-Cisterna, Ricardo and Ravankar, Ankit A and Victorio Salazar Luces, Jose and Hirata, Yasuhisa and Rocco, Paolo},
+  booktitle={2024 33rd IEEE International Conference on Robot and Human Interactive Communication (ROMAN)}, 
+  title={A B-spline Approach for Improved Environmental Awareness in Virtual Walking System using Avatar Robot}, 
+  year={2024},
+  volume={},
+  number={},
+  abbr={ROMAN},
+  bibtex_show={true},
+  pages={189-195},
+  keywords={Legged locomotion;Navigation;Avatars;Aerospace electronics;Cameras;Real-time systems;User experience;Safety;Splines (mathematics);Robots},
+  doi={10.1109/RO-MAN60168.2024.10731425}}
