--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1619,6 +1619,7 @@
   abbr={CASE},
   pages={3932-3939},
   bibtex_show={true},
+  google_scholar_id={vbGhcppDl1QC},
   keywords={Visualization;Service robots;Image edge detection;Robot vision systems;Manipulators;Real-time systems;Safety;Digital twins;Relays;Assembly},
   doi={10.1109/CASE59546.2024.10711707}}
 
@@ -1632,5 +1633,7 @@
   abbr={ROMAN},
   bibtex_show={true},
   pages={189-195},
+  google_scholar_id={EYYDruWGBe4C},
+  preview={ROMAN24.gif},
   keywords={Legged locomotion;Navigation;Avatars;Aerospace electronics;Cameras;Real-time systems;User experience;Safety;Splines (mathematics);Robots},
   doi={10.1109/RO-MAN60168.2024.10731425}}
