update bib and news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1528,6 +1528,9 @@
   doi={10.1109/SII58957.2024.10417484}
   }
 
+
+  
+
 @article{emoto2024automatic,
   title={Automatic inspection of wheel surface defects using a combination of laser sensors and machine vision},
   author={Emoto, Takeshi and Ravankar, Ankit A and Ravankar, Abhijeet and Emaru, Takanori and Kobayashi, Yukinori},
@@ -1637,3 +1640,59 @@
   preview={ROMAN24.gif},
   keywords={Legged locomotion;Navigation;Avatars;Aerospace electronics;Cameras;Real-time systems;User experience;Safety;Splines (mathematics);Robots},
   doi={10.1109/RO-MAN60168.2024.10731425}}
+
+  @inproceedings{liao2024towards,
+  title={Towards Inclusive Dance: A Robotic Approach for Enhancing Movement and Interaction for People with Disabilities},
+  author={Liao, Zhenyu and Dong, Zonghao and Manr{\'\i}quez, Ricardo and Ravankar, Ankit and Martinez Rocha, Juan Carlos and Lavender, Juliette and Seto, Fumi and Monacelli, Eric and Hirata, Yasuhisa},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (Video Paper)},
+  abbr={ICRA},
+  year={2024}
+}
+
+@inproceedings{terayama2024prototype,
+  title={Prototype of Adaptive Touch Walking Support Robot for Maximizing Human Physical Potential Peer-reviewed},
+  author={Terayama, Junya and Ravankar, Ankit and Salazar Luces, Jose Victorio and Hirata, Yasuhisa},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (EXPO Demo Paper)},
+  abbr={ICRA},
+  year={2024}
+}
+
+@inproceedings{breuss2024renkei,
+  title={RENKEI: Connecting sleep and assistive robotics for elderly care},
+  author={Breuss, Alexander and Manr{\'\i}quez, Ricardo and Gnarra, Oriella and Fujs, Manuel and Queralta, Jorge Pe{\~n}a and Ejtehadi, Mehdi and Ravankar, Ankit and Salazar Luces, Jose Victorio and Paez, Diego and Hirata, Yasuhisa and others},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (EXPO Demo Paper)},
+  abbr={ICRA},
+  year={2024}
+}
+
+@inproceedings{manriquez2024stand,
+  title={A Stand-Assist Care Robot for Enhancing Senior Mobility},
+  author={Manr{\'\i}quez, Ricardo and Ravankar, Ankit and Salazar Luces, Jose Victorio and Hatsukari, Takuro and Hirata, Yasuhisa},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (EXPO Demo Paper)},
+  abbr={ICRA},
+  year={2024}
+}
+
+@inproceedings{chikhalikar2024tailoring,
+  title={Tailoring Indoor Search Strategies: The Role of User Preferences in Multi-Target Navigation},
+  author={Chikhalikar, Akash Kedar and Ravankar, Ankit and Salazar Luces, Jose Victorio and Hirata, Yasuhisa},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (Late Breaking Paper)},
+  abbr={ICRA},
+  year={2024}
+}
+
+@inproceedings{manriquez2024adaptive,
+  title={Adaptive Speed Control of Treadmill Device for Enhanced Exercise in Virtual and Mixed Reality Experiences},
+  author={Manr{\'\i}quez, Ricardo and Breuss, Alexander and Gnarra, Oriella and Queralta, Jorge Pe{\~n}a and Ravankar, Ankit and Salazar Luces, Jose Victorio and Paez, Diego and Riener, Robert and Hirata, Yasuhisa},
+  abbr={ICRA},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (EXPO Demo Paper)},
+  year={2024}
+}
+
+@inproceedings{yamamoto2024office,
+  title={Office Robot with Health Sensing Functions},
+  author={Yamamoto, Hana and Hanada, Hiroyasu and Ravankar, Ankit and Salazar Luces, Jose Victorio and Motoe, Masashige and Hirata, Yasuhisa and Ohta, Koichi and Minoru, Nishida and Maekawa, Makiyo},
+  booktitle={IEEE International Conference of Robotics and Automations (ICRA), Yokohama, Japan 2024 (EXPO Demo Paper)},
+  abbr={ICRA},
+  year={2024}
+}
