--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1696,3 +1696,18 @@
   abbr={ICRA},
   year={2024}
 }
+
+@ARTICLE{10844355,
+  author={Tsushima, Yosuke and Yamamoto, Shu and Ravankar, Ankit A and Luces, Jose Victorio Salazar and Hirata, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Task Planning for a Factory Robot Using Large Language Model}, 
+  year={2025},
+  abbr={IEEE-RAL},
+  volume={10},
+  preview={tsush2.gif},
+  number={3},
+  bibtex_show={true},
+  pages={2383-2390},
+  google_scholar_id={kz9GbA2Ns4gC},
+  keywords={Robots;Production facilities;Codes;Service robots;Robot kinematics;Planning;Automobiles;Safety;Fasteners;Chatbots;Large language models;language-based planning;task planning;autonomous mobile robot;human robot interaction},
+  doi={10.1109/LRA.2025.3531153}}
